--- a/locales/en.json
+++ b/locales/en.json
@@ -1,13 +1,13 @@
 {
   "about": "About",
-  "aboutText": "I am a fullstack web developer. I enjoy creating web sites using actual development techonologies.",
+  "aboutText": "I am a fullstack web developer. I enjoy creating web sites using actual development technologies.",
   "intuitive": "Intuitive",
   "intuitiveText": "User experience focused web sites",
   "fast": "Fast",
-  "fastText": "The site's efficienfy is a priority",
+  "fastText": "The site's efficiency is a priority",
   "responsive": "Responsive",
   "responsiveText": "Web sites that work and look good in different screens",
-  "reactive": "Reactives",
+  "reactive": "Reactive",
   "reactiveText": "Instant reactions to the user's interactions",
   "portfolio": "Portfolio",
   "socialNetworks": "Social networks",
