--- a/locales/es.json
+++ b/locales/es.json
@@ -1,5 +1,5 @@
 {
-  "about": "Sobre mi",
+  "about": "Sobre mí",
   "aboutText": "Soy un desarrollador web de fullstack. Disfruto crear sitios web responsivos usando tecnologías de desarrollo actuales.",
   "intuitive": "Intuitivo",
   "intuitiveText": "Sitios web enfocados an la experiencia de usuario.",
