--- a/locales/en.json
+++ b/locales/en.json
@@ -1,10 +1,10 @@
 {
   "about": "About",
-  "aboutText": "I am a fullstack web developer. I enjoy creating web sites using actual development technologies.",
+  "aboutText": "I am a fullstack web developer. I enjoy creating web sites using current development technologies.",
   "intuitive": "Intuitive",
   "intuitiveText": "User experience focused web sites",
   "fast": "Fast",
-  "fastText": "The site's efficiency is a priority",
+  "fastText": "The site's performance is a priority",
   "responsive": "Responsive",
   "responsiveText": "Web sites that work and look good in different screens",
   "reactive": "Reactive",
