--- a/locales/es.json
+++ b/locales/es.json
@@ -4,7 +4,7 @@
   "intuitive": "Intuitivo",
   "intuitiveText": "Sitios web enfocados an la experiencia de usuario.",
   "fast": "Rápido",
-  "fastText": "La eficencia del sitio es una prioridad.",
+  "fastText": "El desempeño del sitio es una prioridad.",
   "responsive": "Responsivo",
   "responsiveText": "Sitios web que funcionan y se ven bien en diferentes pantallas.",
   "reactive": "Reactivos",
