Change section title name

--- a/locales/en.json
+++ b/locales/en.json
@@ -10,7 +10,7 @@
   "reactive": "Reactive",
   "reactiveText": "Instant reactions to the user's interactions",
   "portfolio": "Portfolio",
-  "socialNetworks": "Social networks",
+  "contacts": "Contacts",
   "repositories": "Repositories"
 
 }
