--- a/locales/es.json
+++ b/locales/es.json
@@ -10,6 +10,6 @@
   "reactive": "Reactivos",
   "reactiveText": "Reacciones instantáneas a las interacciones del usuario.",
   "portfolio": "Portafolio",
-  "socialNetworks": "Redes sociales",
+  "contacts": "Contactos",
   "repositories": "Repositorios"
 }
