Add queues description

--- a/locales/es.json
+++ b/locales/es.json
@@ -16,6 +16,7 @@
   "projects": {
     "title": "Projects",
     "description": {
+      "queues": "Este proyecto permite tomar tickets para participar en una sala de espera. El objetivo es eliminar colas físicas",
       "kanpeki": "Proyecto Santiaguero que abarca la cultura pop asiática y occidental (se incluyen la cultura pop y tradicional japonesa, coreana, china,etc; además de  los videojuegos, comics, literatura en general, la cinefilia y la música de corte mundial)",
       "sanchoRestaurant": "Sancho Restaurant, especialidades de la deliciosa cocina creada con el ingenio y la pasión, inspirados en los fantásticos sabores de España. ",
       "zaruArquitectura": "Diseño de diferentes viviendas y decoraciones exteriores e interiores a la medida.",
