--- a/locales/en.json
+++ b/locales/en.json
@@ -16,6 +16,7 @@
   "projects": {
     "title": "Projects",
     "description": {
+      "queues": "This project is about taking tickets to for virtual queues. It aims to eliminate physical queues.",
       "kanpeki": "Santiaguero project that covers Asian and Western pop culture (includes Japanese, Korean, Chinese pop and traditional culture, etc.; in addition to video games, comics, literature in general, cinephilia and world-class music).",
       "sanchoRestaurant": "Sancho Restaurant, delicious cuisine specialties created with ingenuity and passion, inspired by the fantastic flavors of Spain.",
       "zaruArquitectura": "Design of different homes and custom exterior and interior decorations.",
