--- a/locales/es.json
+++ b/locales/es.json
@@ -34,5 +34,9 @@
   },
   "frontendDescription": "Lo visual y lo hermoso y artístico del proyecto.",
   "backendDescription": "Lo que el usuario no ve. El cerebro del proyecto.",
-  "databaseDescription": "La forma en la que los datos se guardan."
+  "database": "Bases de datos",
+  "databaseDescription": "La forma en la que los datos se guardan.",
+  "language": "Lenguajes",
+  "languagesDescription": "Los idiomas en los que te puedes comunicar conmigo"
+
 }
