Set visit text traduction

--- a/locales/es.json
+++ b/locales/es.json
@@ -6,6 +6,7 @@
     "button1": "Ver habilidades",
     "button2": "Contáctame"
   },
+  "visit": "Visitar",
   "about": "Sobre mí",
   "aboutText": "Soy un desarrollador web de fullstack. Disfruto crear sitios web responsivos usando tecnologías de desarrollo actuales.",
   "intuitive": "Intuitivo",
