--- a/locales/en.json
+++ b/locales/en.json
@@ -6,6 +6,7 @@
     "button1": "Check skills",
     "button2": "Contact me"
   },
+  "home": "Home",
   "visit": "Visit",
   "about": "About",
   "aboutText": "I am a fullstack web developer. I enjoy creating web sites using current development technologies.",
