Change about text

--- a/locales/en.json
+++ b/locales/en.json
@@ -9,7 +9,7 @@
   "home": "Home",
   "visit": "Visit",
   "about": "About",
-  "aboutText": "I am a fullstack web developer. I enjoy creating web sites using current development technologies.",
+  "aboutText": "My name is José García. I am a fullstack web developer. I enjoy making ideas happen on the web using current development technologies.",
   "intuitive": "Intuitive",
   "intuitiveText": "User experience focused web sites",
   "fast": "Fast",
