--- a/locales/es.json
+++ b/locales/es.json
@@ -9,7 +9,7 @@
   "home": "Inicio",
   "visit": "Visitar",
   "about": "Sobre mí",
-  "aboutText": "Soy un desarrollador web de fullstack. Disfruto crear sitios web responsivos usando tecnologías de desarrollo actuales.",
+  "aboutText": "Mi nombre es José García. Soy un desarrollador web de fullstack. Disfruto llevando ideas a sitios web responsivos usando tecnologías de desarrollo actuales.",
   "intuitive": "Intuitivo",
   "intuitiveText": "Sitios web enfocados an la experiencia de usuario.",
   "fast": "Rápido",
