--- a/locales/es.json
+++ b/locales/es.json
@@ -9,7 +9,9 @@
   "home": "Inicio",
   "visit": "Visitar",
   "about": "Sobre mí",
-  "aboutText": "Mi nombre es José García. Soy un desarrollador web de fullstack. Disfruto llevando ideas a sitios web responsivos usando tecnologías de desarrollo actuales. Los sitios que construyo son:",
+  "aboutText1": "¡Hola! Mi nombre es José García. Soy un desarrollador web de fullstack. Disfruto creando ideas, haciendo que sucedan en la web utilizando tecnologías de desarrollo actuales. Creo aplicaciones  y sitios limpios, bien diseñados y fáciles de usar (con SEO en mente).",
+  "aboutText2": "He estado trabajando en el campo durante más de 3 años, ayudando a pequeñas empresas a crecer y prosperar mediante el diseño de sitios web personalizados que les ayudan a comunicarse mejor con sus clientes y aumentar los ingresos a través de una mejor visibilidad en motores de búsqueda como Google y Bing/Yahoo!.",
+  "aboutText3": "Mis clientes van desde micro empresas unipersonales hasta grandes empresas como Dt4o. Analicemos sus necesidades y objetivos para que pueda brindarle un plan que le proporcione los resultados que desea.",
   "intuitive": "Intuitivo",
   "intuitiveText": "Sitios web enfocados an la experiencia de usuario.",
   "fast": "Rápido",
