Change portfolio to skills

--- a/locales/en.json
+++ b/locales/en.json
@@ -21,7 +21,7 @@
   "responsiveText": "Web sites that work and look good in different screens",
   "reactive": "Reactive",
   "reactiveText": "Instant reactions to the user's interactions",
-  "portfolio": "Portfolio",
+  "skills": "Skills",
   "contacts": "Contacts",
   "repositories": "Repositories",
   "formTitle": "Have a question or want to work together?",
