--- a/locales/es.json
+++ b/locales/es.json
@@ -21,7 +21,7 @@
   "responsiveText": "Sitios web que funcionan y se ven bien en diferentes pantallas.",
   "reactive": "Reactivos",
   "reactiveText": "Reacciones instantáneas a las interacciones del usuario.",
-  "portfolio": "Portafolio",
+  "skills": "Habilidades",
   "contacts": "Contactos",
   "repositories": "Repositorios",
   "formTitle": "Tiene una pregunta o quiere trabajar en equipo?",
