Add testing to supported languages

--- a/locales/en.json
+++ b/locales/en.json
@@ -25,6 +25,7 @@
   "contacts": "Contacts",
   "repositories": "Repositories",
   "formTitle": "Have a question or want to work together?",
+  "testing": "Testing",
   "projects": {
     "title": "Projects",
     "description": {
