--- a/locales/es.json
+++ b/locales/es.json
@@ -25,6 +25,7 @@
   "contacts": "Contactos",
   "repositories": "Repositorios",
   "formTitle": "Tiene una pregunta o quiere trabajar en equipo?",
+  "testing": "Testing",
   "projects": {
     "title": "Proyectos",
     "description": {
