Add bug description

--- a/locales/en.json
+++ b/locales/en.json
@@ -49,6 +49,7 @@
   "backendDescription": "Part of the app the user doesn't see. The brains of the project.",
   "database": "Database",
   "databaseDescription": "They way you save data.",
+  "testingDescription": "Make sure everything works as it should.",
   "language": "Languages",
   "languagesDescription": "The languages in which you can communicate with me"
 }
